Bug 94936 - FILESAVE PDF: LibreOffice crashes when saving document (GTK3, Gnome 3.18)
Summary: FILESAVE PDF: LibreOffice crashes when saving document (GTK3, Gnome 3.18)
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
5.0.2.2 release
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Maxim Monastirsky
URL:
Whiteboard: target:5.1.0 target:5.0.4
Keywords: haveBacktrace
: 94949 94999 95030 95201 95248 95290 95365 95504 95624 (view as bug list)
Depends on:
Blocks:
 
Reported: 2015-10-10 13:22 UTC by Alexandre Figura
Modified: 2016-10-25 19:20 UTC (History)
14 users (show)

See Also:
Crash report or crash signature:


Attachments
Backtrace (177 bytes, application/octet-stream)
2015-10-10 15:18 UTC, Alexandre Figura
Details
Backtrace (1.66 KB, application/gzip)
2015-10-10 15:24 UTC, Alexandre Figura
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Alexandre Figura 2015-10-10 13:22:21 UTC
Hi,

I just updated my version of LibreOffice, and this last crashes whenever I try to save a document (or export to PDF), whatever application I use (Calc, Impress or Writer).

Here is the errors trace when I launch ``libreoffice`` on the command line:

(soffice:2976): Gtk-CRITICAL **: gtk_entry_set_text: assertion 'GTK_IS_ENTRY (entry)' failed

(soffice:2976): Gtk-CRITICAL **: gtk_entry_set_text: assertion 'GTK_IS_ENTRY (entry)' failed

(soffice:2976): Gtk-CRITICAL **: gtk_widget_grab_focus: assertion 'GTK_IS_WIDGET (widget)' failed

(soffice:2976): Gtk-CRITICAL **: _gtk_file_chooser_entry_set_base_folder: assertion 'GTK_IS_FILE_CHOOSER_ENTRY (chooser_entry)' failed

(soffice:2976): Gtk-CRITICAL **: gtk_entry_get_text: assertion 'GTK_IS_ENTRY (entry)' failed

(soffice:2976): Gtk-CRITICAL **: gtk_entry_get_text: assertion 'GTK_IS_ENTRY (entry)' failed

I succeed to resolve this problem by using either one of the following solutions:
- use GTK2 instead of GTK3. I uncommented the line ``export SAL_USE_VCLPLUGIN=gtk`` in /etc/profile.d/libreoffice-fresh.sh
- use LibreOffice dialogs in LibreOffice options (LibreOffice -> General -> Open/Save Dialogs).

My system runs on Archlinux with:
- LibreOffice 5.0.2-2
- GTK3 3.18.1-1
- GTK2 2.24.28-1
- Gnome 3.18.0-1
Comment 1 Buovjaga 2015-10-10 14:03:02 UTC
What theme do you use? See bug 94511.
GTK3 is experimental and Arch should not have enabled it.

Maybe a backtrace would be useful to attach: https://wiki.documentfoundation.org/QA/BugReport/Debug_Information#GNU.2FLinux:_How_to_get_a_backtrace

Set to NEEDINFO.
Change back to UNCONFIRMED after you have provided more information.
Comment 2 Alexandre Figura 2015-10-10 15:18:01 UTC
Created attachment 119483 [details]
Backtrace
Comment 3 Alexandre Figura 2015-10-10 15:20:08 UTC
I added the backtrace.

Moreover, I use the standard Gnome theme: Adwaita.
Comment 4 Alexandre Figura 2015-10-10 15:24:57 UTC
Created attachment 119484 [details]
Backtrace
Comment 5 Maxim Monastirsky 2015-10-14 07:58:48 UTC
*** Bug 95030 has been marked as a duplicate of this bug. ***
Comment 6 Maxim Monastirsky 2015-10-14 08:18:02 UTC
Can't reproduce with 5.0.2 under Fedora 23 with GTK3 3.18.1 and Adwaita theme. So this must be either Arch specific, or gtk upstream one (that was already patched in Fedora but not in Arch). Moreover, the backtrace clearly indicates a crash in gtk itself, not in LO. So I'll close it as NOTOURBUG until proved otherwise.
Comment 7 Maxim Monastirsky 2015-10-14 09:09:30 UTC
(In reply to Maxim Monastirsky from comment #6)
> Can't reproduce with 5.0.2
Hmm, I was testing the wrong version, as there is no 5.0.2 in Fedora. But still I don't reproduce with 5.0.3.1 and my own builds of libreoffice-5-0 and master.

> So this must be either Arch specific, or gtk upstream one (that was
> already patched in Fedora but not in Arch).
It seems that GTK3 isn't patched at all in Fedora, nor in Arch. So more investigation is needed. Let's keep it as NEW for now then. Sorry for the noise.
Comment 8 Maxim Monastirsky 2015-10-16 07:34:39 UTC
*** Bug 94999 has been marked as a duplicate of this bug. ***
Comment 9 Commit Notification 2015-10-17 20:52:43 UTC
Maxim Monastirsky committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=c1b97d2747004d1912744ab7ff11353a73713310

tdf#94936 Update the button removal hack to 3.18

It will be available in 5.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Maxim Monastirsky 2015-10-17 20:55:56 UTC
Will also backport to 5-0 soon.
Comment 11 Commit Notification 2015-10-18 12:00:20 UTC
Maxim Monastirsky committed a patch related to this issue.
It has been pushed to "libreoffice-5-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=b9996778c3033281d624b960c61200cfbb4c7746&h=libreoffice-5-0

tdf#94936 Update the button removal hack to 3.18

It will be available in 5.0.4.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 12 Maxim Monastirsky 2015-10-20 19:08:20 UTC
*** Bug 95201 has been marked as a duplicate of this bug. ***
Comment 13 Maxim Monastirsky 2015-10-22 13:09:54 UTC
*** Bug 95248 has been marked as a duplicate of this bug. ***
Comment 14 Maxim Monastirsky 2015-10-24 16:51:00 UTC
*** Bug 95290 has been marked as a duplicate of this bug. ***
Comment 15 Maxim Monastirsky 2015-10-27 18:48:05 UTC
*** Bug 95365 has been marked as a duplicate of this bug. ***
Comment 16 Maxim Monastirsky 2015-11-02 09:55:17 UTC
*** Bug 95504 has been marked as a duplicate of this bug. ***
Comment 17 Julien Nabet 2015-11-02 10:38:24 UTC
(In reply to Maxim Monastirsky from comment #16)
> *** Bug 95504 has been marked as a duplicate of this bug. ***

Maxim: I asked the reporter to test with "export SAL_USE_VCLPLUGIN=gtk"
 (see https://bugs.documentfoundation.org/show_bug.cgi?id=95504#c7).
Since he reproduced the crash with gtk (not gtk3), are you sure it's a dup?
Comment 18 Maxim Monastirsky 2015-11-02 10:52:31 UTC
(In reply to Julien Nabet from comment #17)
> Maxim: I asked the reporter to test with "export SAL_USE_VCLPLUGIN=gtk"
>  (see https://bugs.documentfoundation.org/show_bug.cgi?id=95504#c7).
Maybe he didn't start LO from the same terminal where he did the export? Anyway, the backtrace there is of gtk3, and as such it's a duplicate. We shouldn't assume there is another bug, unless we get also gtk2 related backtrace.
Comment 19 Maxim Monastirsky 2015-11-09 09:04:11 UTC
*** Bug 95624 has been marked as a duplicate of this bug. ***
Comment 20 Maxim Monastirsky 2015-11-15 08:30:12 UTC
*** Bug 94949 has been marked as a duplicate of this bug. ***
Comment 21 Alexandre Figura 2015-12-19 10:01:31 UTC
I confirm that this bug has been solved in the version 5.0.4 of LibreOffice. Thanks!
Comment 22 Julien Nabet 2015-12-19 10:07:50 UTC
Thank you Alexandre for your feedback, let's put this to VERIFIED then.