tdf#94936 Update the button removal hack to 3.18

Gtk 3.18 has the filename entry in the header too.

Change-Id: Id1abf5baf0e82c03e27ede2bfc67ec1983a2c4fb